2008-09-11  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/workflow/context/PageFlowManager.java: 
	* src/de/schlund/pfixcore/workflow/VariantManager.java: 
	* src/org/pustefixframework/config/contextxmlservice/parser/internal/ContextConfigImpl.java: 
	* src/org/pustefixframework/config/contextxmlservice/parser/internal/PageFlowHolderImpl.java: 
	* src/org/pustefixframework/config/contextxmlservice/parser/ContextXMLParsingHandler.java: 
	* src/org/pustefixframework/config/contextxmlservice/parser/PageFlowParsingHandler.java: 
	* src/org/pustefixframework/config/contextxmlservice/parser/PageFlowVariantParsingHandler.java: 
	* src/org/pustefixframework/config/contextxmlservice/ContextConfig.java: 
	* src/org/pustefixframework/config/contextxmlservice/PageFlowHolder.java: 
	Added support for application specific page flow implementations.

2008-09-11  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* lib/saxon8.jar: 
	* lib/saxon8-dom.jar: 
	* lib/saxon8-xpath.jar: 
	Removed Saxon 8.

	* lib/saxon9.jar: 
	* lib/saxon9-dom.jar: 
	* lib/saxon9-xpath.jar: 
	Added Saxon 9.1.0.2.

2008-09-08  Martin Leidig  <mleidig@schlund.de>

	Improved XSLT error handling: Failed loading of Templates objects
	due to errors in the included stylesheets now displays speaking
	error message and line number for included leaf targets (e.g. metatags.xsl)

	* src/de/schlund/pfixxml/util/Xslt.java: Use StreamSource for included
	leaf targets if error occurred and repeat transformation.

2008-09-08  Martin Leidig  <mleidig@schlund.de>

	Improved XSLT error handling:
	- Added error location information to exception stacktrace displayed
	on error page
	- XML/XSLT erros now are displayed with a speaking error message
	on top (thus non-Java developers must not search inside the stack
	hierarchy)
	- Rendering exceptions caused by extension function calls now are
	explicitly designated as Java errors